# RaspberryPi_FaceRecognition

./: .gitignore  LICENSE
1.Firmware/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
1.Firmware/include/: alilink.h  manage.h  my_cmd.h  my_csv.h  my_fileIO.h  ring_queue.h  student.h
1.Firmware/linux-draw/: CMakeLists.txt  DrawImage.cpp  DrawImage.h  GenVedio.h  Pubdef.h  build  readjpg.cpp  readjpg.h  test.cpp
1.Firmware/linux-draw/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
1.Firmware/linux-draw/includes/libavdevice/: version.h
1.Firmware/linux-draw/includes/libavformat/: avformat.h  version.h
1.Firmware/linux-draw/includes/libavutil/: ffversion.h
1.Firmware/linux-draw/includes/libjpeg/: jmorecfg.h
1.Firmware/script/: create_csv.py  test.csv
1.Firmware/source/: alilink.cpp  main.cpp  manage.c  manage.cpp  my_cmd.cpp  my_csv.cpp  my_fileIO.cpp  ring_queue.cpp  student.c
